# next-feature-smartapp

./: Dockerfile  README.md  docker-compose.yml  example.env  pyproject.toml  setup.cfg
.github/workflows/: actions.yml
app/: main.py  settings.py
app/api/endpoints/: botx.py
app/bot/: bot.py
app/bot/commands/: common.py
app/bot/middlewares/: debug.py
app/bot/rpc/: methods.py
app/resources/static/: asset-manifest.json  flutter_service_worker.js  index.html  main.dart.js  smartapp-manifest.json  sw.js  sw.js.map  version.json
app/schemas/: enums.py  menu.py  sync_request.py
app/services/: answers.py  ui_elements.py
backend/: .gitignore  Dockerfile  docker-compose.yml  example.env  pyproject.toml  setup.cfg
backend/app/: logger.py  settings.py
backend/app/bot/: bot.py  feature_router.py  httpx_hooks.py  smartapp.py
backend/app/resources/: strings.py
backend/app/services/: answers.py  beautify.py  botx_user_search.py  ui_elements.py
frontend/: .gitignore  .gitlab-ci.yml  .npmrc  README.md  package-lock.json  package.json  smartapp-manifest.json
frontend/app/: index.tsx
frontend/app/components/: Button.tsx  FeatureHeader.tsx  FeaturePage.tsx  Input.tsx  JsonViewer.tsx  MainLoader.tsx  RadioButton.tsx  Version.tsx
frontend/app/hooks/: useStore.ts
frontend/app/public/: index.html
frontend/config/: eslint.config.mjs  tsconfig.json  webpack.analyze.mjs  webpack.config.js  webpack.dev.mjs  webpack.prod.mjs
frontend/src/: constants.scss  constants.ts  index.scss  index.tsx
scripts/: build  format  run-back  run-front
(+375 files in other folders)
