# https://python-poetry.org/docs/

[tool.poetry]
name = "feature-smartapp"
version = "0.1.0"
description = "TODO"
authors = []


[tool.poetry.dependencies]
python = "~3.9"

pybotx = "~0.38.0"
pybotx-smartapp-rpc = "~0.4.0"

fastapi = "~0.70.0"
uvicorn = "~0.13.4"

loguru = "~0.6.0"
mako = "~1.1.4"
python-dotenv = "^0.19.1"

aiofiles = "^0.8.0"

[tool.poetry.dev-dependencies]
black = "~21.6b0"
isort = "5.9.2"
autoflake = "~1.4"
mypy = "~0.910"
wemake-python-styleguide = "~0.15.3"
bandit = "1.7.2"  # https://github.com/PyCQA/bandit/issues/837

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
